2005-09-22  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_xauth/pam_xauth.c: (check_acl, pam_sm_open_session,
	pam_sm_close_session): Strip redundant "pam_xauth: " prefix from
	text of log messages.
	(pam_sm_open_session): Replace sequence of malloc(), strcpy()
	and strcat() calls with asprintf().  Replace syslog() calls
	with pam_syslog().

	* modules/pam_nologin/pam_nologin.c (parse_args): Use strncmp()
	instead of memcmp() for string comparison.

2005-09-21  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_nologin/pam_nologin.c: Include <syslog.h>.
	(parse_args): Add pam_handle_t* argument.  Log unrecognized
	options.
	(perform_check): Log pam_get_user() and malloc() failures.
	(pam_sm_authenticate, pam_sm_setcred, pam_sm_acct_mgmt):
	Pass pam_handle_t* to parse_args().

	* modules/pam_mail/pam_mail.c: Include <errno.h>.
	Remove YOUR_MAIL_VERBOSE_FORMAT, YOUR_MAIL_STANDARD_FORMAT and
	NO_MAIL_STANDARD_FORMAT macros.
	(parse_args, get_folder): Cleanup error messages.
	(get_folder): Fix leak of the path_mail variable in case of
	pam_get_user() failure.  Cleanup memory management.
	(get_mail_status): Add pam_handle_t* argument.	Fix leaks of
	namelist variable.  Cleanup memory management.	Log memory
	allocation failures.  Remove 250-byte limit on Maildir pathname.
	(report_mail): Mark text messages for translation.
	(_do_mail): Cleanup memory management.	Pass pam_handle_t*
	to get_mail_status().

	* po/Linux-PAM.pot: Update with new strings from pam_mail for
	translation.
	* po/cs.po: Likewise.
	* po/de.po: Likewise.
	* po/es.po: Likewise.
	* po/fi.po: Likewise.
	* po/fr.po: Likewise.
	* po/hu.po: Likewise.
	* po/it.po: Likewise.
	* po/ja.po: Likewise.
	* po/nb.po: Likewise.
	* po/pa.po: Likewise.
	* po/pl.po: Likewise.
	* po/pt.po: Likewise.
	* po/pt_BR.po: Likewise.
	* po/zh_CN.po: Likewise.
	* po/zh_TW.po: Likewise.

2005-09-20  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Add finish translation.
	* po/fi.po: New.
